--- a/demo/curiosity-2.0-pic32mz-ef/curiosity-2.0-pic32mz-ef.X/nbproject/Makefile-genesis.properties
+++ b/demo/curiosity-2.0-pic32mz-ef/curiosity-2.0-pic32mz-ef.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Apr 20 22:22:45 CEST 2023
+#Mon Apr 24 23:12:21 CEST 2023
 default.languagetoolchain.version=4.20
 default.Pack.dfplocation=/home/jnaulet/.mchp_packs/Microchip/PIC32MZ-EF_DFP/1.3.58
 conf.ids=default
 default.languagetoolchain.dir=/opt/microchip/xc32/v4.20/bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=de2d3bc95a22a3f432c2e39f49efafbc
 host.id=244g-ildn-ch
-default.platformTool.md5=null
-configurations-xml=701793ba8d71d726f60242fab5517a9c
+configurations-xml=d8ce64214a4bb561e700d532a4ddcd90
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5ac7a99e4b1de1ea64248c04a43532ad
+default.com-micrcohip-mplab-mdbcore-pkob4-PKOB4ToolImpl.md5=dd22c4b79ea45fd5e4e74f71c232a17a
 proj.dir=/home/jnaulet/Documents/dev/OpenPicoRTOS-dev/demo/curiosity-2.0-pic32mz-ef/curiosity-2.0-pic32mz-ef.X
 host.platform=linux
