--- a/demo/win32/Makefile
+++ b/demo/win32/Makefile
@@ -35,6 +35,10 @@ $(BUILD_DIR)/%.o: %.c
 	-mkdir -p $(@D)
 	$(CROSS)$(CC) $(CFLAGS) -c $< -o $@
 
+splint:
+cppcheck:
+	@echo "dummy analysis"
+
 clean:
 	-rm -rf $(BUILD_DIR)
 	-rm -f $(EXE)
