demo: unstaged SiPeed Longan Nano demo

--- a/demo/sipeed-longan-nano/Makefile
+++ b/demo/sipeed-longan-nano/Makefile
@@ -1,14 +1,14 @@
 # Longan Nano eval board
-ELF_RAM := longan-nano_ram.elf
-ELF_FLASH := longan-nano_rom.elf
+# ELF_RAM := sipeed-longan-nano_ram.elf
+ELF_FLASH := sipeed-longan-nano_rom.elf
 
 CC := gcc
 CROSS := riscv64-unknown-elf-
 BUILD := build
 
 # picoRTOS
-PICORTOS_DIR := $(abspath ../../..)
--include $(PICORTOS_DIR)/staging/devices/gigadevice/gd32vf103/Makefile.in
+PICORTOS_DIR := $(abspath ../..)
+-include $(PICORTOS_DIR)/devices/gigadevice/gd32vf103/Makefile.in
 
 # static anaylzers
 SPLINTFLAGS := -checks +unixlib
@@ -36,29 +36,29 @@ LDFLAGS += -march=rv32imac -mabi=ilp32 -mcmodel=medlow
 INCLUDE += -I$(PICORTOS_DIR)/drivers/include
 INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/adc
 INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/can
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/clock
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/dma
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/flash
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/gpio
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/mux
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/pwm
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/spi
+INCLUDE += -I$(PICORTOS_DIR)/drivers/clock
+INCLUDE += -I$(PICORTOS_DIR)/drivers/dma
+INCLUDE += -I$(PICORTOS_DIR)/drivers/flash
+INCLUDE += -I$(PICORTOS_DIR)/drivers/gpio
+INCLUDE += -I$(PICORTOS_DIR)/drivers/mux
+INCLUDE += -I$(PICORTOS_DIR)/drivers/pwm
+INCLUDE += -I$(PICORTOS_DIR)/drivers/spi
 INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/twi
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/uart
-INCLUDE += -I$(PICORTOS_DIR)/staging/drivers/wd
+INCLUDE += -I$(PICORTOS_DIR)/drivers/uart
+INCLUDE += -I$(PICORTOS_DIR)/drivers/wd
 
 SRC_C += $(PICORTOS_DIR)/staging/drivers/adc/adc-gd32vf103.c
 SRC_C += $(PICORTOS_DIR)/staging/drivers/can/can-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/clock/clock-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/dma/dma-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/flash/flash-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/gpio/gpio-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/mux/mux-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/pwm/pwm-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/spi/spi-gd32vf103.c
+SRC_C += $(PICORTOS_DIR)/drivers/clock/clock-gd32vf103.c
+SRC_C += $(PICORTOS_DIR)/drivers/dma/dma-gd32vf103.c
+SRC_C += $(PICORTOS_DIR)/drivers/flash/flash-gd32vf103.c
+SRC_C += $(PICORTOS_DIR)/drivers/gpio/gpio-gd32vf103.c
+SRC_C += $(PICORTOS_DIR)/drivers/mux/mux-gd32vf103.c
+SRC_C += $(PICORTOS_DIR)/drivers/pwm/pwm-gd32vf103.c
+SRC_C += $(PICORTOS_DIR)/drivers/spi/spi-gd32vf103.c
 SRC_C += $(PICORTOS_DIR)/staging/drivers/twi/twi-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/uart/uart-gd32vf103.c
-SRC_C += $(PICORTOS_DIR)/staging/drivers/wd/wd-gd32vf103_fwdgt.c
+SRC_C += $(PICORTOS_DIR)/drivers/uart/uart-gd32vf103.c
+SRC_C += $(PICORTOS_DIR)/drivers/wd/wd-gd32vf103_fwdgt.c
 
 # ipcs
 INCLUDE += -I$(PICORTOS_DIR)/ipc
@@ -66,7 +66,7 @@ SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_mutex.c
 SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
 
 # demo
-SRC_C += longan-nano.c
+SRC_C += sipeed-longan-nano.c
 SRC_C += main.c
 
 OBJ := $(SRC_C:%.c=$(BUILD)/%.o)
@@ -76,11 +76,11 @@ all: $(ELF_RAM) $(ELF_FLASH)
 
 $(ELF_RAM): $(OBJ)
 	-mkdir -p $(@D)
-	$(CROSS)$(CC) $^ -T$(LDRAM) $(LDFLAGS) -o $@
+	$(CROSS)$(CC) $^ -T$(LDRAM) $(LDFLAGS) -o $@ -Wl,-Map=$@.map
 
 $(ELF_FLASH): $(OBJ)
 	-mkdir -p $(@D)
-	$(CROSS)$(CC) $^ -T$(LDFLASH) $(LDFLAGS) -o $@
+	$(CROSS)$(CC) $^ -T$(LDFLASH) $(LDFLAGS) -o $@ -Wl,-Map=$@.map
 
 $(BUILD)/%.o: %.c
 	-mkdir -p $(@D)
