devices: pic32mz use of split intc driver

--- a/devices/microchip/pic32mz-ef/Makefile.in
+++ b/devices/microchip/pic32mz-ef/Makefile.in
@@ -9,6 +9,7 @@ INCLUDE += -I$(DEVICE_DIR) -I$(ARCH_DIR)
 
 SRC_C := $(PICORTOS_DIR)/picoRTOS.c
 SRC_C += $(ARCH_DIR)/picoRTOS_port.c
+SRC_C +=  $(PICORTOS_DIR)/arch/mips32/drivers/intc-pic32mx.c
 
 SRC_S := $(DEVICE_DIR)/startup.S
 SRC_S += $(ARCH_DIR)/picoRTOS_portasm.S
