test: static analysis happens for all devices

--- a/test/static_analysis/picoRTOS-SMP/Makefile
+++ b/test/static_analysis/picoRTOS-SMP/Makefile
@@ -1,46 +1,29 @@
 PICORTOS_DIR := $(abspath ../../..)
+DEVICES := $(shell find $(PICORTOS_DIR)/devices -name "Makefile-SMP.in")
 
-CHECK += arch/arm/cm0+/rp2040
+# recursion...
+-include $(DEVICE)
+
+INCLUDE += -I.
 
 SPLINT := splint
-SPLINTFLAGS := -checks -unixlib -I. -I$(PICORTOS_DIR)
-SPLINTFLAGS += -I$(PICORTOS_DIR)/arch/include
+SPLINTFLAGS := -checks -unixlib
 
 CPPCHECK := cppcheck
 CPPCHECKFLAGS := --enable=all --inline-suppr
-CPPCHECKFLAGS += -DNDEBUG -I. -I$(PICORTOS_DIR)
-CPPCHECKFLAGS += -I$(PICORTOS_DIR)/arch/include
-CPPCHECKFLAGS += --suppress=missingIncludeSystem
+CPPCHECKFLAGS += -DNDEBUG --suppress=missingIncludeSystem
 
-SRC += $(PICORTOS_DIR)/picoRTOS-SMP.c
-SRC += $(PICORTOS_DIR)/ipc/picoRTOS_futex.c
-SRC += $(PICORTOS_DIR)/ipc/picoRTOS_mutex.c
-SRC += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
-SRC += $(PICORTOS_DIR)/ipc/picoRTOS_queue.c
-SRC += test.c
+SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_futex.c
+SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_mutex.c
+SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
+SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_queue.c
+SRC_C += test.c
 
-splint: SA := $(SPLINT)
-splint: SAFLAGS := $(SPLINTFLAGS)
-splint: $(CHECK)
+all:
+	for d in $(DEVICES); do \
+	$(MAKE) check DEVICE=$$d || exit; \
+	done
 
-cppcheck: SA := $(CPPCHECK)
-cppcheck: SAFLAGS := $(CPPCHECKFLAGS)
-cppcheck: $(CHECK)
-
-arch/%:
-	$(SA) $(SAFLAGS) $(SRC) \
-	  -I$(PICORTOS_DIR)/$@ \
-	  -I$(PICORTOS_DIR)/$@/samples \
-	  $(PICORTOS_DIR)/$@/picoRTOS_port.c \
-	  $(PICORTOS_DIR)/$@/picoRTOS-SMP_port.c
-
-# special case unfortunately
-arch/arm/cm0+/rp2040:
-	$(SA) $(SAFLAGS) $(SRC) \
-	  -I$(PICORTOS_DIR)/$@ \
-	  -I$(PICORTOS_DIR)/$@/.. \
-	  -I$(PICORTOS_DIR)/$@/samples \
-	  $(PICORTOS_DIR)/$@/../picoRTOS_port.c \
-	  $(PICORTOS_DIR)/$@/picoRTOS-SMP_port.c
-
-.PHONY: splint cppcheck
+check:
+	$(SPLINT) $(SPLINTFLAGS) $(INCLUDE) $(SRC_C)
+	$(CPPCHECK) $(CPPCHECKFLAGS) $(INCLUDE) $(SRC_C)
