demo: devkit-mpc5748g single-core and SMP support

--- a/staging/demo/devkit-mpc5748g/Makefile
+++ b/staging/demo/devkit-mpc5748g/Makefile
@@ -1,6 +1,11 @@
+ifneq ($(SMP),)
+POSTFIX := -SMP
+SUPPORT_FOR_SMP := -DSUPPORT_FOR_SMP
+endif
+
 # DEVKIT-MPC5748G test board
-ELF_RAM := devkit-mpg5748g-SMP_ram.elf
-ELF_FLASH := devkit-mpg5748g-SMP_flash.elf
+ELF_RAM := devkit-mpg5748g$(POSTFIX)_ram.elf
+ELF_FLASH := devkit-mpg5748g$(POSTFIX)_flash.elf
 
 CC := gcc
 CROSS := powerpc-eabivle-
@@ -8,7 +13,7 @@ BUILD := build
 
 # picoRTOS
 PICORTOS_DIR := $(abspath ../../..)
--include $(PICORTOS_DIR)/staging/devices/nxp/mpc5748g/Makefile-SMP.in
+-include $(PICORTOS_DIR)/staging/devices/nxp/mpc5748g/Makefile$(POSTFIX).in
 
 # static anaylzers
 SPLINTFLAGS := -checks +unixlib
@@ -22,18 +27,15 @@ INCLUDE += -I.
 CFLAGS += -Wall -Wextra -std=c99 $(INCLUDE) -O0 -g3 $(DEFINE)
 CFLAGS += -fmessage-length=0 -msdata=eabi -mlra -funsigned-bitfields
 CFLAGS += -ffunction-sections -fdata-sections -fno-common -mcpu=e200z4
-CFLAGS += -mbig -mvle -mregnames -mhard-float
+CFLAGS += -mbig -mvle -mregnames -mhard-float $(SUPPORT_FOR_SMP)
 
 SFLAGS += -x assembler-with-cpp -g3 $(DEFINE) $(INCLUDE)
 SFLAGS += -g3 -mcpu=e200z4 -mbig -mvle -mregnames
 
 LDRAM := $(DEVICE_DIR)/gcc/mpc5748g_ram.ld
 LDFLASH := $(DEVICE_DIR)/gcc/mpc5748g_rom.ld
-LDFLAGS += -Xlinker --gc-sections -mcpu=e200z4 -mhard-float -nostdlib
 
-# picoRTOS
-SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_mutex.c
-SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
+LDFLAGS += -Xlinker --gc-sections -mcpu=e200z4 -mhard-float -nostdlib
 
 # drivers
 INCLUDE += -I$(PICORTOS_DIR)/drivers/include
@@ -60,6 +62,10 @@ SRC_C += $(PICORTOS_DIR)/staging/drivers/pwm/pwm-nxp_emios.c
 SRC_C += $(PICORTOS_DIR)/staging/drivers/spi/spi-nxp_dspi.c
 SRC_C += $(PICORTOS_DIR)/staging/drivers/twi/twi-nxp_i2c.c
 SRC_C += $(PICORTOS_DIR)/staging/drivers/uart/uart-nxp_linflexd.c
+
+# IPCs
+SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_mutex.c
+SRC_C += $(PICORTOS_DIR)/ipc/picoRTOS_cond.c
 
 # demo
 SRC_C += devkit-mpc5748g.c
