demo: openocd ftdi fix form sipeed longan nano on amigaball

--- a/demo/amigaball-lcd/openocd/sipeed-longan-nano.cfg
+++ b/demo/amigaball-lcd/openocd/sipeed-longan-nano.cfg
@@ -5,7 +5,13 @@ ftdi layout_init 0x0030 0x003b
 ftdi layout_signal nSRST -data 0x0010 -oe 0x0010
 ftdi layout_signal nTRST -data 0x0020 -oe 0x0020
 
+# AD0 -> TCK
+# AD1 -> TDI
+# AD2 -> TDO
+# AD3 -> TMS
+# AD5 -> RST
+
 transport select jtag
-adapter speed 10000
+adapter speed 1000
 
 source [find target/gd32vf103.cfg]
