demo: removed linker files from atsamd51 related demos

--- a/demo/adafruit-itsybitsy-m4/Makefile
+++ b/demo/adafruit-itsybitsy-m4/Makefile
@@ -64,8 +64,8 @@ OBJ += $(SRC_S:%.S=$(BUILD)/%.o)
 
 # custom linker scripts for arduino-cli (bootloader)
 # Original files are in devices/atmel/atsame5x/gcc/samd51g_xxx.ld
-LDRAM := gcc/adafruit-arduino_ram.ld
-LDFLASH := gcc/adafruit-arduino_rom.ld
+LDRAM := $(DEVICE_DIR)/gcc/atsamd51g19a_arduino-boot_ram.ld
+LDFLASH := $(DEVICE_DIR)/gcc/atsamd51g19a_arduino-boot_rom.ld
 
 all: $(ELF_RAM) $(ELF_FLASH)
 
